--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Professional Portfolio - Your Name</title>
+    <title>Portafolio Cabrera Ramos</title>
     <meta name="description" content="Professional portfolio showcasing projects, skills, and learning journey. Available for exciting opportunities." />
     <meta name="author" content="Your Name" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
